-Fixed the menu border being visible at all times

--- a/src/Pages/Guarians/guarianRef.css
+++ b/src/Pages/Guarians/guarianRef.css
@@ -62,7 +62,6 @@ h1 {
   width: 0px;
   overflow-y: hidden;
   background-color: rgb(51, 48, 73);
-  border-right: 3px solid #eee;
   transition: 0.3s;
 }
 
